styles.css
body {
    background-color: #222831;
    color: #eeeeee;

    text-align: center;
    font-family: "Roboto", sans-serif;
}

#app {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
}

#current-users {
    font-size: 1rem;
}

.message-received {
    text-align: left;

    font-size: 1rem;
    font-family: "Roboto", sans-serif;

    padding: .5rem;
    margin-bottom: .5rem;
    margin-left: 4rem;
    margin-right: 4rem;

    border: 3px solid #00adb5;
    border-radius: 1rem;

    background-color:  #393e46;
    color: #eeeeee;

    width: 20rem;
    word-wrap: break-word;
}

.message-sent {
    text-align: right;

    font-size: 1rem;
    font-family: "Roboto", sans-serif;

    padding: .5rem;
    /* margin-bottom: .5rem; */
    margin-bottom: .5rem;
    margin-left: 4rem;
    margin-right: 4rem;

    border: 3px solid #eeeeee;
    border-radius: 1rem;
    
    background-color: #00adb5;
    color: #eeeeee;

    width: 20rem;
    word-wrap: break-word;
}

#message-input {
    font-size: 1rem;
    font-family: "Roboto", sans-serif;

    padding: .5rem;
    /* margin-right: 1rem; */
    margin-bottom: .5rem;

    border: 5px solid #00adb5;
    border-radius: .5rem;

    width: 20rem;
}

#send-button {
    font-size: 1.5rem;
    font-family: "Roboto", sans-serif;

    padding: .5rem;
    margin-right: 1rem;
    margin-bottom: .5rem;

    border: 5px solid #eeeeee;
    border-radius: .5rem;

    background-color: #00adb5;
    color: #eeeeee;
}

#send-button:hover {
    background-color: #eeeeee;
    color: #222831;

    border: 5px solid #00adb5;
}

#change-name-button {
    font-size: 1rem;
    font-family: "Roboto", sans-serif;

    padding: .5rem;
    /* margin-left: 1rem; */
    margin-bottom: .5rem;

    border: 5px solid #eeeeee;
    border-radius: .5rem;

    background-color: #00adb5;
    color: #eeeeee;
}

#change-name-button:hover {
    background-color: #eeeeee;
    color: #222831;

    border: 5px solid #00adb5;
}

